--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,31 @@
 img {
     width: 30%;
 }
+.card-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin:50px;
+    padding-top: 50px;
+}
+.pokemon-list {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin:50px;
+    padding-top: 50px;
+    
+}
+.pokemon-list-control{
+  display: flex;
+  align-items: center; 
+}
+select {
+    margin-right: 10px; 
+    padding: 5px;
+   
+}
+.pokemon-list-control button { 
+    margin-left: 10px; 
+}
