creando pagina NotFound - desafio pokeApi

--- a/src/App.css
+++ b/src/App.css
@@ -38,3 +38,11 @@ select {
 .pokemon-list-control button { 
     margin-left: 10px; 
 }
+.active {
+    color: red;
+    text-decoration: none;
+}
+.no-active {
+    color: yellow;
+    text-decoration: none;
+}
